--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -35,6 +35,7 @@
     "@react-google-maps/api": "^2.18.1",
     "@reduxjs/toolkit": "^1.7.2",
     "@spotlightjs/spotlight": "^1.2.5",
+    "@vis.gl/react-google-maps": "^0.4.3",
     "axios": "^1.6.2",
     "daisyui": "^3.5.0",
     "formik": "^2.2.9",
