--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -7,13 +7,12 @@
     "cy:headless": "cypress run",
     "cy": "cypress open",
     "db:migrate:dev": "prisma migrate dev",
-    "dev": "vite",
+    "dev": "(npx spotlight-sidecar) & vite",
     "lint:fix": "eslint --cache --fix --ignore-path ../../.gitignore --ext .js,.jsx,.ts,.tsx src",
     "lint": "eslint --max-warnings=0 --cache --ignore-path ../../.gitignore --ext .js,.jsx,.ts,.tsx src",
     "postinstall": "cypress install",
     "preview:test": "start-server-and-test preview http://localhost:5001",
     "preview": "vite preview",
-    "spotlight": "npx npx spotlight-sidecar",
     "start": "npx http-server build --gzip -a 0.0.0.0 -p $PORT -c 1209600",
     "test:ci": "vitest run",
     "test:coverage": "npx vite preview --outDir coverage/lcov-report",
