feat(apps/web): update login page style (#43)
* feat(apps/web): update login page style

* feat(apps/web): use ui/Input in ListForm

* feat(apps/web): hide ListForm when unused

* feat(apps/web): add cancel button

* feat(apps/web): use navbar and border for Header

* fix(apps/web): add missing onCallback dependency

* feat(apps/web): improve lists items ui

* feat(apps/web): improve create list button

* refactor(apps/web): remove DashboardWrap

* Remove unused CSS styles and update layout in App component

* Fix media query in AuthWrap module CSS

* Add icons and update styling in Header and PlacesAutocomplete components

* Update background color in PlacesAutocomplete component

* Refactor PlaceModal component and update PlaceAddress and PlaceWebsite components

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -7,13 +7,12 @@
     "cy:headless": "cypress run",
     "cy": "cypress open",
     "db:migrate:dev": "prisma migrate dev",
-    "dev": "vite",
+    "dev": "(npx spotlight-sidecar) & vite",
     "lint:fix": "eslint --cache --fix --ignore-path ../../.gitignore --ext .js,.jsx,.ts,.tsx src",
     "lint": "eslint --max-warnings=0 --cache --ignore-path ../../.gitignore --ext .js,.jsx,.ts,.tsx src",
     "postinstall": "cypress install",
     "preview:test": "start-server-and-test preview http://localhost:5001",
     "preview": "vite preview",
-    "spotlight": "npx npx spotlight-sidecar",
     "start": "npx http-server build --gzip -a 0.0.0.0 -p $PORT -c 1209600",
     "test:ci": "vitest run",
     "test:coverage": "npx vite preview --outDir coverage/lcov-report",
@@ -38,7 +37,6 @@
     "axios": "^1.6.2",
     "daisyui": "^3.5.0",
     "formik": "^2.2.9",
-    "history": "^5.3.0",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
