--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -91,6 +91,7 @@
     "start-server-and-test": "^2.0.0",
     "stylelint": "^14.16.1",
     "stylelint-config-prettier": "^9.0.3",
+    "tailwind-merge": "^2.2.1",
     "tailwindcss": "^3.3.2",
     "tsconfig": "0.0.0",
     "typescript": "^5.1.6",
