--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -25,6 +25,7 @@
     "@radix-ui/react-icons": "^1.3.0",
     "formik": "^2.2.9",
     "prop-types": "^15.8.1",
-    "react-stately": "^3.24.0"
+    "react-stately": "^3.24.0",
+    "tailwindcss": "^3.4.1"
   }
 }
