--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -35,8 +35,11 @@
     "@spotlightjs/spotlight": "^1.2.5",
     "@vis.gl/react-google-maps": "^0.4.3",
     "axios": "^1.6.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "daisyui": "^3.5.0",
     "formik": "^2.2.9",
+    "lucide-react": "^0.320.0",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -44,6 +47,7 @@
     "react-query": "^3.34.16",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.2.1",
+    "tailwindcss-animate": "^1.0.7",
     "ui": "0.0.0",
     "yup": "^1.2.0"
   },
