--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -23,9 +23,13 @@
     "@radix-ui/colors": "^1.0.0",
     "@radix-ui/react-avatar": "^1.0.3",
     "@radix-ui/react-icons": "^1.3.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "formik": "^2.2.9",
+    "lucide-react": "^0.320.0",
     "prop-types": "^15.8.1",
     "react-stately": "^3.24.0",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "tailwindcss-animate": "^1.0.7"
   }
 }
