--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -8,7 +8,7 @@ NODE_ENV="development"
 PORT=4444
 
 # UI
-APP_URL="http://127.0.0.1:5001"
+APP_URL="http://localhost:53422"
 
 # Sendgrid
 SENDGRID_API_KEY="SG.llkajsdlfkjalsdkjflkasdf"
