--- a/turbo.json
+++ b/turbo.json
@@ -49,6 +49,9 @@
     "COOKIE_SECRET",
     "CYPRESS_PROJECT_ID",
     "ENABLE_REQUEST_LOGGING",
+    "GOOGLE_KEY_FILE_PATH",
+    "GOOGLE_PROJECT_ID",
+    "GOOGLE_MAPS_API_KEY",
     "JWT_SECRET",
     "NODE_ENV",
     "PORT",
