Add Google Service Account to environment variables

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,6 +10,7 @@ env:
   COOKIE_SALT: 9yDzDu8E6JzFbbMK
   COOKIE_SECRET: f1qnL2ixpbu99pX0LWGoUBBFJZmNhlBMzWGsNF1e3bg=
   DATABASE_URL: postgresql://postgres:postgres@localhost:5432/rocco
+  GOOGLE_SERVICE_ACCOUNT: ${{ secrets.GOOGLE_SERVICE_ACCOUNT }}
   SENDGRID_API_KEY: SG.1234567890
   JWT_SECRET: f1qnL2ixpbu99pX0LWGoUBBFJZmNhlBMzWGsNF1e3bg=
 
