--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -10,6 +10,9 @@ PORT=4444
 # UI
 APP_URL="http://localhost:53422"
 
+# Google Service Account (Base64 encoded)
+GOOGLE_SERVICE_ACCOUNT="...."
+
 # Sendgrid
 SENDGRID_API_KEY="SG.llkajsdlfkjalsdkjflkasdf"
 SENDGRID_SENDER_EMAIL=""
