--- a/turbo.json
+++ b/turbo.json
@@ -49,6 +49,7 @@
     "COOKIE_SECRET",
     "CYPRESS_PROJECT_ID",
     "ENABLE_REQUEST_LOGGING",
+    "GOOGLE_SERVICE_ACCOUNT",
     "JWT_SECRET",
     "NODE_ENV",
     "PORT",
