Add linting and fix linting issues, update ListItem component, and import Place type

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -8,7 +8,9 @@
     "cy": "cypress open",
     "dev": "(npx spotlight-sidecar) & vite",
     "lint:fix": "eslint --cache --fix --ignore-path ../../.gitignore --ext .js,.jsx,.ts,.tsx src",
-    "lint": "eslint --max-warnings=0 --cache --ignore-path ../../.gitignore --ext .js,.jsx,.ts,.tsx src",
+    "lint:stylelint": "stylelint --config ../../.stylelintrc.json --cache --fix 'src/**/*.{css,scss,less,styl}'",
+    "lint:eslint": "eslint --max-warnings=0 --cache --ignore-path ../../.gitignore --ext .js,.jsx,.ts,.tsx src",
+    "lint": "npm run lint:eslint && npm run lint:stylelint && npm run typecheck",
     "postinstall": "cypress install",
     "preview:test": "start-server-and-test preview http://localhost:53422",
     "preview": "vite preview",
