refactor(github): simplify workflows

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,8 +11,9 @@ env:
   COOKIE_SECRET: f1qnL2ixpbu99pX0LWGoUBBFJZmNhlBMzWGsNF1e3bg=
   DATABASE_URL: postgresql://postgres:postgres@localhost:5432/rocco
   GOOGLE_SERVICE_ACCOUNT: ${{ secrets.GOOGLE_SERVICE_ACCOUNT }}
-  SENDGRID_API_KEY: SG.1234567890
   JWT_SECRET: f1qnL2ixpbu99pX0LWGoUBBFJZmNhlBMzWGsNF1e3bg=
+  SENDGRID_API_KEY: SG.1234567890
+  VITE_API_URL: ""
 
 jobs:
   test:
@@ -48,14 +49,22 @@ jobs:
       - name: 📦 Install dependencies
         run: npm install
 
+      - name: 📥 Generate artifacts
+        run: npm run prisma:generate -w rocco-api
+
+      - name: 🔬 Lint
+        run: npx turbo run lint
+
+      - name: 🔎 Type check
+        run: npx turbo run typecheck
+
       #! The tests require the Prisma client to be generated.
       - name: 🏗️ Generate Prisma client
-        run: npx turbo run prisma:generate
+        run: npm run prisma:generate -w rocco-api
 
       - name: 🧪 Unit tests
         run: npm run test
-        
-      
+
       - name: 🧪 End-to-end tests
         # Uses the official Cypress GitHub action https://github.com/cypress-io/github-action
         uses: cypress-io/github-action@v2
