fix(turbo): add VERCEL_URL to globalEnv

--- a/turbo.json
+++ b/turbo.json
@@ -57,6 +57,7 @@
     "SENDGRID_API_KEY",
     "SENDGRID_SENDER_EMAIL",
     "SENDGRID_SENDER_NAME",
-    "NEXT_PUBLIC_API_URL"
+    "NEXT_PUBLIC_API_URL",
+    "VERCEL_URL"
   ]
 }
