Update component exports and dependencies

--- a/apps/aidea/tsconfig.json
+++ b/apps/aidea/tsconfig.json
@@ -21,6 +21,5 @@
     "incremental": true
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
-  "exclude": ["node_modules", "cypress", "vite.config.ts"],
-  "moduleResolution": ["node_modules", ".next", "node"]
+  "exclude": ["node_modules", "cypress", "vite.config.ts"]
 }
