--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -13,7 +13,7 @@
     "@types/react-dom": "^18.0.6",
     "eslint": "^8.45.0",
     "eslint-config-ponti": "0.0.0",
-    "react": "^18.2.0",
+    "react": "18.2.0",
     "tailwind-merge": "^2.2.1",
     "tsconfig": "0.0.0",
     "typescript": "^5.1.6"
