--- a/apps/aidea/package.json
+++ b/apps/aidea/package.json
@@ -54,7 +54,7 @@
     "@testing-library/cypress": "9.0.0",
     "@testing-library/react": "14.0.0",
     "@types/node": "20.4.1",
-    "@types/react": "18.2.14",
+    "@types/react": "^18.2.66",
     "@types/react-dom": "18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
