--- a/.github/workflows/deploy-prisma.yml
+++ b/.github/workflows/deploy-prisma.yml
@@ -4,7 +4,7 @@ env:
 on:
   push:
     paths:
-      - prisma/migrations/**
+      - packages/db/**
     branches:
       - main
 jobs:
@@ -22,4 +22,5 @@ jobs:
         run: npm install
 
       - name: ⬆️ Deploy
+        working-directory: packages/db
         run: npx prisma migrate deploy
