--- a/apps/aidea/package.json
+++ b/apps/aidea/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "@emotion/react": "^11.0.0-rc.0",
     "@emotion/styled": "^11.11.0",
+    "@hominem/db": "0.0.0",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@next/bundle-analyzer": "13.4.9",
     "@radix-ui/colors": "^1.0.0",
