--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -4,21 +4,16 @@
   "private": true,
   "license": "MIT",
   "scripts": {
-    "build": "npm run clean && npm run prisma:generate && tsc",
+    "build": "npm run clean && tsc",
     "clean": "rm -rf build",
     "dev": "npm run build && nodemon --config nodemon.json",
     "lint": "eslint --ext .js,.jsx,.ts,.tsx src",
-    "prisma:deploy": "npx prisma migrate deploy",
-    "db:migrate:dev": "dotenv -e .env.development -- prisma migrate dev",
-    "prisma:dev": "npx prisma migrate dev",
-    "prisma:generate": "npx prisma generate",
-    "prisma:push": "npx prisma db push",
-    "prisma:reset": "npx prisma migrate reset",
     "start": "node build/src/index",
     "test": "NODE_ENV=test jest",
     "typecheck": "tsc --noEmit --incremental false"
   },
   "dependencies": {
+    "@hominem/db": "0.0.0",
     "@fastify/circuit-breaker": "3.2.0",
     "@fastify/cookie": "^8.3.0",
     "@fastify/cors": "^8.3.0",
@@ -27,7 +22,6 @@
     "@fastify/jwt": "^7.2.0",
     "@fastify/rate-limit": "^8.0.3",
     "@fastify/secure-session": "^6.1.0",
-    "@prisma/client": "^5.10.2",
     "@segment/analytics-node": "^1.0.0",
     "@sendgrid/mail": "^7.6.1",
     "@sentry/node": "^7.60.1",
@@ -48,7 +42,6 @@
     "eslint-config-ponti": "0.0.0",
     "jest": "29.5.0",
     "nodemon": "^3.0.1",
-    "prisma": "^5.10.2",
     "ts-jest": "29.1.0",
     "ts-node": "10.4.0",
     "typescript": "^5.1.6"
