--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc",
-    "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
+    "dev": "ts-node-dev --respawn --transpile-only index.ts",
     "prisma:deploy": "npx prisma migrate deploy",
     "prisma:dev": "npx prisma migrate dev",
     "prisma:generate": "npx prisma generate",
