--- a/apps/aidea/package.json
+++ b/apps/aidea/package.json
@@ -49,7 +49,8 @@
     "react-dom": "18.2.0",
     "react-query": "^3.39.2",
     "superjson": "1.12.4",
-    "zod": "^3.22.3"
+    "zod": "^3.22.3",
+    "ui": "0.0.0"
   },
   "devDependencies": {
     "@testing-library/cypress": "9.0.0",
