--- a/apps/aidea/package.json
+++ b/apps/aidea/package.json
@@ -49,8 +49,8 @@
     "react-dom": "18.2.0",
     "react-query": "^3.39.2",
     "superjson": "1.12.4",
-    "zod": "^3.22.3",
-    "ui": "0.0.0"
+    "ui": "0.0.0",
+    "zod": "^3.22.3"
   },
   "devDependencies": {
     "@testing-library/cypress": "9.0.0",
@@ -91,8 +91,8 @@
     "stylelint-config-prettier": "^9.0.3",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6",
-    "vite": "^5.1.6",
-    "vitest": "^1.3.1"
+    "vite": "^5.2.6",
+    "vitest": "^1.4.0"
   },
   "lint-staged": {
     "*.css": "stylelint --cache --fix",
