--- a/apps/aidea/package.json
+++ b/apps/aidea/package.json
@@ -43,6 +43,7 @@
     "classnames": "^2.3.2",
     "daisyui": "^3.2.1",
     "ky": "^0.33.3",
+    "lucide-react": "^0.363.0",
     "next": "^14.1.3",
     "next-auth": "^4.24.7",
     "react": "18.2.0",
