--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "main": "./index.tsx",
   "types": "./index.tsx",
+  "type": "module",
   "license": "MIT",
   "scripts": {
     "lint": "eslint ./*.ts*"
