--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -67,7 +67,8 @@
     "@vitejs/plugin-react": "^4.0.3",
     "@vitest/coverage-v8": "^0.33.0",
     "autoprefixer": "^10.4.13",
-    "cypress": "^12.17.1",
+    "cypress": "^13.7.1",
+    "dotenv": "^16.4.5",
     "eslint": "^8.45.0",
     "eslint-config-next": "13.4.9",
     "eslint-config-ponti": "0.0.0",
