--- a/apps/aidea/package.json
+++ b/apps/aidea/package.json
@@ -54,7 +54,7 @@
     "zod": "^3.22.3"
   },
   "devDependencies": {
-    "@testing-library/cypress": "9.0.0",
+    "@testing-library/cypress": "10.0.1",
     "@testing-library/react": "14.0.0",
     "@types/node": "20.4.1",
     "@types/react": "^18.2.66",
@@ -62,7 +62,7 @@
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.2.1",
-    "@vitest/coverage-v8": "^0.33.0",
+    "@vitest/coverage-v8": "1.4.0",
     "autoprefixer": "^10.4.12",
     "cypress": "^13.7.1",
     "dotenv-cli": "^7.3.0",
@@ -87,6 +87,7 @@
     "postcss-import": "^15.1.0",
     "prettier": "3.0.0",
     "prettier-plugin-tailwindcss": "^0.4.0",
+    "rollup-plugin-analyzer": "^4.0.0",
     "start-server-and-test": "^2.0.0",
     "stylelint": "^14.16.1",
     "stylelint-config-prettier": "^9.0.3",
