--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -55,7 +55,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.22.9",
-    "@testing-library/cypress": "9.0.0",
+    "@testing-library/cypress": "10.0.1",
     "@testing-library/jest-dom": "^6.2.0",
     "@testing-library/react": "14.0.0",
     "@types/node": "^20.4.5",
@@ -64,8 +64,8 @@
     "@types/react-redux": "^7.1.22",
     "@typescript-eslint/eslint-plugin": "^6.2.1",
     "@typescript-eslint/parser": "^6.2.1",
-    "@vitejs/plugin-react": "^4.0.3",
-    "@vitest/coverage-v8": "^0.33.0",
+    "@vitejs/plugin-react": "^4.2.1",
+    "@vitest/coverage-v8": "1.4.0",
     "autoprefixer": "^10.4.13",
     "cypress": "^13.7.1",
     "dotenv": "^16.4.5",
