Add new environment variables to turbo.json

--- a/turbo.json
+++ b/turbo.json
@@ -59,6 +59,8 @@
     "SENDGRID_SENDER_EMAIL",
     "SENDGRID_SENDER_NAME",
     "NEXT_PUBLIC_API_URL",
-    "VERCEL_URL"
+    "VERCEL_URL",
+    "VITE_API_URL",
+    "VITE_GOOGLE_API_KEY"
   ]
 }
