fix(package): add rollup optional dep

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -117,5 +117,8 @@
     "reporter": [
       "lcov"
     ]
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "^4.13.0"
   }
 }
