--- a/apps/aidea/package.json
+++ b/apps/aidea/package.json
@@ -43,16 +43,18 @@
     "classnames": "^2.3.2",
     "daisyui": "^3.2.1",
     "ky": "^0.33.3",
+    "lucide-react": "^0.363.0",
     "next": "^14.1.3",
     "next-auth": "^4.24.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-query": "^3.39.2",
     "superjson": "1.12.4",
+    "ui": "0.0.0",
     "zod": "^3.22.3"
   },
   "devDependencies": {
-    "@testing-library/cypress": "9.0.0",
+    "@testing-library/cypress": "10.0.1",
     "@testing-library/react": "14.0.0",
     "@types/node": "20.4.1",
     "@types/react": "^18.2.66",
@@ -60,9 +62,9 @@
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.2.1",
-    "@vitest/coverage-v8": "^0.33.0",
+    "@vitest/coverage-v8": "1.4.0",
     "autoprefixer": "^10.4.12",
-    "cypress": "^12.17.1",
+    "cypress": "^13.7.1",
     "dotenv-cli": "^7.3.0",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
@@ -85,13 +87,14 @@
     "postcss-import": "^15.1.0",
     "prettier": "3.0.0",
     "prettier-plugin-tailwindcss": "^0.4.0",
+    "rollup-plugin-analyzer": "^4.0.0",
     "start-server-and-test": "^2.0.0",
     "stylelint": "^14.16.1",
     "stylelint-config-prettier": "^9.0.3",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6",
-    "vite": "^5.1.6",
-    "vitest": "^1.3.1"
+    "vite": "^5.2.6",
+    "vitest": "^1.4.0"
   },
   "lint-staged": {
     "*.css": "stylelint --cache --fix",
