--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -2,6 +2,7 @@
   "name": "rocco-web",
   "version": "0.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "build": "tsc && vite build",
     "cy:headless": "cypress run",
@@ -54,7 +55,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.22.9",
-    "@testing-library/cypress": "9.0.0",
+    "@testing-library/cypress": "10.0.1",
     "@testing-library/jest-dom": "^6.2.0",
     "@testing-library/react": "14.0.0",
     "@types/node": "^20.4.5",
@@ -63,10 +64,11 @@
     "@types/react-redux": "^7.1.22",
     "@typescript-eslint/eslint-plugin": "^6.2.1",
     "@typescript-eslint/parser": "^6.2.1",
-    "@vitejs/plugin-react": "^4.0.3",
-    "@vitest/coverage-v8": "^0.33.0",
+    "@vitejs/plugin-react": "^4.2.1",
+    "@vitest/coverage-v8": "1.4.0",
     "autoprefixer": "^10.4.13",
-    "cypress": "^12.17.1",
+    "cypress": "^13.7.1",
+    "dotenv": "^16.4.5",
     "eslint": "^8.45.0",
     "eslint-config-next": "13.4.9",
     "eslint-config-ponti": "0.0.0",
@@ -99,10 +101,9 @@
     "tailwindcss": "^3.4.1",
     "tsconfig": "0.0.0",
     "typescript": "^5.1.6",
-    "ui": "0.0.0",
-    "vite": "^4.4.7",
+    "vite": "^5.2.6",
     "vite-tsconfig-paths": "^4.2.3",
-    "vitest": "^0.33.0"
+    "vitest": "^1.4.0"
   },
   "lint-staged": {
     "*.css": "stylelint --config ../../.stylelintrc.json --cache --fix",
@@ -116,5 +117,8 @@
     "reporter": [
       "lcov"
     ]
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "^4.13.0"
   }
 }
