--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -12,7 +12,7 @@
     "@types/prop-types": "^15.7.5",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.0.6",
-    "eslint": "^8.45.0",
+    "eslint": "8.57.0",
     "eslint-config-ponti": "0.0.0",
     "react": "18.2.0",
     "tailwind-merge": "^2.2.1",
