--- a/.gitignore
+++ b/.gitignore
@@ -30,11 +30,8 @@ yarn-debug.log*
 yarn-error.log*
 
 # local env files
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env*
+!.env.example
 
 # turbo
 .turbo
