--- a/apps/aidea/package.json
+++ b/apps/aidea/package.json
@@ -7,8 +7,8 @@
     "cy:headless": "cypress run",
     "dev": "next dev -H 127.0.0.1 -p 5000",
     "build": "next build",
-    "lint": "eslint --cache --ignore-path .gitignore --ext .ts,.tsx src",
-    "lint:fix": "eslint --cache --fix --ignore-path .gitignore --ext .ts,.tsx src",
+    "lint": "eslint --cache --ignore-path ../../.gitignore --ext .ts,.tsx src",
+    "lint:fix": "eslint --cache --fix --ignore-path ../../.gitignore --ext .js,.jsx,.ts,.tsx src",
     "lint:strict": "eslint --max-warnings=0 src",
     "postinstall": "cypress install",
     "preview": "npm run build && next start --port 4173",
@@ -66,12 +66,13 @@
     "autoprefixer": "^10.4.12",
     "cypress": "^13.7.1",
     "dotenv-cli": "^7.3.0",
-    "eslint": "8.44.0",
+    "eslint": "8.57.0",
     "eslint-config-next": "13.4.9",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-cypress": "2.13.3",
     "eslint-plugin-import": "2.27.5",
     "eslint-plugin-jsx-a11y": "6.7.1",
+    "eslint-config-ponti": "0.0.0",
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
@@ -85,7 +86,6 @@
     "next-router-mock": "^0.9.7",
     "postcss": "8.4.31",
     "postcss-import": "^15.1.0",
-    "prettier": "3.0.0",
     "prettier-plugin-tailwindcss": "^0.4.0",
     "rollup-plugin-analyzer": "^4.0.0",
     "start-server-and-test": "^2.0.0",
