--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -13,7 +13,6 @@
     "typecheck": "tsc --noEmit --incremental false"
   },
   "dependencies": {
-    "@hominem/db": "0.0.0",
     "@fastify/circuit-breaker": "3.2.0",
     "@fastify/cookie": "^8.3.0",
     "@fastify/cors": "^8.3.0",
@@ -22,6 +21,7 @@
     "@fastify/jwt": "^7.2.0",
     "@fastify/rate-limit": "^8.0.3",
     "@fastify/secure-session": "^6.1.0",
+    "@hominem/db": "0.0.0",
     "@segment/analytics-node": "^1.0.0",
     "@sendgrid/mail": "^7.6.1",
     "@sentry/node": "^7.60.1",
@@ -42,7 +42,7 @@
     "eslint-config-ponti": "0.0.0",
     "jest": "29.5.0",
     "nodemon": "^3.0.1",
-    "ts-jest": "29.1.0",
+    "ts-jest": "^29.1.0",
     "ts-node": "10.4.0",
     "typescript": "^5.1.6"
   }
