--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -69,7 +69,7 @@
     "autoprefixer": "^10.4.13",
     "cypress": "^13.7.1",
     "dotenv": "^16.4.5",
-    "eslint": "^8.45.0",
+    "eslint": "8.57.0",
     "eslint-config-next": "13.4.9",
     "eslint-config-ponti": "0.0.0",
     "eslint-config-prettier": "^8.5.0",
@@ -89,7 +89,6 @@
     "msw": "^2.0.11",
     "postcss": "8.4.31",
     "postcss-import": "^15.1.0",
-    "prettier": "3.0.0",
     "prettier-plugin-tailwindcss": "^0.4.0",
     "react-test-renderer": "^18.2.0",
     "rollup-plugin-analyzer": "^4.0.0",
