--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "eslint-config-ponti": "0.0.0",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.3",
-    "prettier": "^3.0.0",
+    "prettier": "3.0.0",
     "turbo": "^1.13.0"
   },
   "engines": {
