--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   ],
   "scripts": {
     "build": "npm run prisma:generate && turbo run build",
+    "commit": "commit",
+    "commitlint": "commitlint --edit",
     "dev": "caddy start & turbo run dev --parallel",
     "docker:api:build": "docker build -t rocco-api:latest -f apps/api/Dockerfile .",
     "docker:api:run": "docker run -it -p 4444:4444 --name=rocco-api rocco-api",
@@ -27,8 +29,9 @@
     "prisma:migrate": "npm run prisma:migrate -w @hominem/db"
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.6.6",
-    "@commitlint/config-conventional": "^17.6.6",
+    "@commitlint/cli": "^19.2.1",
+    "@commitlint/config-conventional": "^19.1.0",
+    "@commitlint/prompt-cli": "^19.2.0",
     "eslint-config-ponti": "0.0.0",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.3",
