--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -99,7 +99,7 @@
     "tailwind-merge": "^2.2.1",
     "tailwindcss": "^3.4.1",
     "tsconfig": "0.0.0",
-    "typescript": "^5.1.6",
+    "typescript": "5.1.6",
     "vite": "^5.2.6",
     "vite-tsconfig-paths": "^4.2.3",
     "vitest": "^1.4.0"
