--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -17,7 +17,7 @@
     "react": "18.2.0",
     "tailwind-merge": "^2.2.1",
     "tsconfig": "0.0.0",
-    "typescript": "^5.1.6"
+    "typescript": "5.1.6"
   },
   "dependencies": {
     "@emotion/styled": "^11.8.1",
