--- a/apps/aidea/package.json
+++ b/apps/aidea/package.json
@@ -58,9 +58,9 @@
     "@testing-library/react": "14.0.0",
     "@types/node": "20.4.1",
     "@types/react": "^18.2.66",
-    "@types/react-dom": "18.2.7",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
+    "@types/react-dom": "^18.2.23",
+    "@typescript-eslint/eslint-plugin": "^7.4.0",
+    "@typescript-eslint/parser": "^7.4.0",
     "@vitejs/plugin-react": "^4.2.1",
     "@vitest/coverage-v8": "1.4.0",
     "autoprefixer": "^10.4.12",
@@ -68,11 +68,11 @@
     "dotenv-cli": "^7.3.0",
     "eslint": "8.57.0",
     "eslint-config-next": "13.4.9",
+    "eslint-config-ponti": "0.0.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-cypress": "2.13.3",
     "eslint-plugin-import": "2.27.5",
     "eslint-plugin-jsx-a11y": "6.7.1",
-    "eslint-config-ponti": "0.0.0",
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
@@ -92,7 +92,7 @@
     "stylelint": "^14.16.1",
     "stylelint-config-prettier": "^9.0.3",
     "tailwindcss": "3.3.2",
-    "typescript": "5.1.6",
+    "typescript": "5.4.3",
     "vite": "^5.2.6",
     "vitest": "^1.4.0"
   },
