--- a/packages/eslint-config-ponti/package.json
+++ b/packages/eslint-config-ponti/package.json
@@ -11,6 +11,8 @@
     "react.js"
   ],
   "dependencies": {
+    "@typescript-eslint/eslint-plugin": "^7.4.0",
+    "@typescript-eslint/parser": "^7.4.0",
     "eslint": "8.57.0",
     "eslint-config-next": "^13.4.12",
     "eslint-config-prettier": "^8.5.0",
@@ -24,7 +26,7 @@
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-testing-library": "5.6.0",
     "eslint-plugin-unused-imports": "^3.0.0",
-    "typescript": "5.1.6"
+    "typescript": "5.4.3"
   },
   "publishConfig": {
     "access": "public"
