refactor(apps): remove test update & snapshots

--- a/apps/aidea/package.json
+++ b/apps/aidea/package.json
@@ -14,12 +14,11 @@
     "preview:test": "start-server-and-test preview http://localhost:4173",
     "start": "next start",
     "test": "vitest --run",
-    "test:ci": "vitest run",
-    "test:coverage": "pnpx vite preview --outDir coverage/lcov-report",
+    "test:coverage": "vitest --run --coverage",
+    "test:coverage:view": "npx vite preview --outDir coverage/lcov-report",
     "test:e2e": "npm run preview:test 'cypress open'",
     "test:e2e:ci": "npm run preview:test 'npx cypress run --record'",
     "test:e2e:headless": "npm run preview:test 'cypress run'",
-    "test:update": "vitest run -u",
     "test:watch": "vitest",
     "typecheck": "tsc --noEmit --incremental false"
   },
