--- a/apps/aidea/package.json
+++ b/apps/aidea/package.json
@@ -26,6 +26,7 @@
     "@emotion/react": "^11.0.0-rc.0",
     "@emotion/styled": "^11.11.0",
     "@hominem/db": "0.0.0",
+    "@hominem/components": "0.0.0",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@next/bundle-analyzer": "13.4.9",
     "@radix-ui/colors": "^1.0.0",
@@ -48,7 +49,6 @@
     "react-dom": "18.2.0",
     "react-query": "^3.39.2",
     "superjson": "1.12.4",
-    "ui": "0.0.0",
     "zod": "^3.22.3"
   },
   "devDependencies": {
