--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -28,6 +28,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@headlessui/react": "^1.7.15",
+    "@hominem/components": "0.0.0",
     "@reduxjs/toolkit": "^1.7.2",
     "@spotlightjs/spotlight": "^1.2.5",
     "@vis.gl/react-google-maps": "^0.4.3",
@@ -45,7 +46,6 @@
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.2.1",
     "tailwindcss-animate": "^1.0.7",
-    "ui": "0.0.0",
     "yup": "^1.2.0"
   },
   "devDependencies": {
