--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,93 +1,92 @@
 {
-  "name": "rocco-web",
-  "version": "0.0.0",
-  "private": true,
-  "type": "module",
-  "scripts": {
-    "build": "tsc && vite build",
-    "cy:headless": "cypress run",
-    "cy": "cypress open",
-    "dev": "(npx spotlight-sidecar) & vite",
-    "lint:fix": "biome format --write ./src",
-    "lint:stylelint": "stylelint --config ../../.stylelintrc.json --cache --fix 'src/**/*.{css,scss,less,styl}'",
-    "lint": "biome lint ./src && npm run lint:stylelint",
-    "postinstall": "cypress install",
-    "preview:test": "start-server-and-test preview http://localhost:53422",
-    "preview": "vite preview",
-    "start": "npx http-server build --gzip -a 0.0.0.0 -p $PORT -c 1209600",
-    "test": "vitest --run",
-    "test:coverage": "vitest --run --coverage",
-    "test:coverage:view": "npx vite preview --outDir coverage/lcov-report",
-    "test:e2e": "npm run preview:test 'cypress open'",
-    "test:e2e:ci": "npm run preview:test 'npx cypress run --record'",
-    "test:e2e:headless": "npm run preview:test 'cypress run'",
-    "test:watch": "vitest",
-    "typecheck": "tsc --noEmit --incremental false"
-  },
-  "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
-    "@headlessui/react": "^1.7.15",
-    "@hominem/components": "0.0.0",
-    "@reduxjs/toolkit": "^1.7.2",
-    "@spotlightjs/spotlight": "^1.2.5",
-    "@vis.gl/react-google-maps": "^0.4.3",
-    "axios": "^1.6.2",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
-    "daisyui": "^3.5.0",
-    "formik": "^2.2.9",
-    "lucide-react": "^0.320.0",
-    "prop-types": "^15.8.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-icons": "^4.12.0",
-    "react-query": "^3.34.16",
-    "react-redux": "^8.1.1",
-    "react-router-dom": "^6.2.1",
-    "tailwindcss-animate": "^1.0.7",
-    "yup": "^1.2.0"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.22.9",
-    "@testing-library/cypress": "10.0.1",
-    "@testing-library/jest-dom": "^6.2.0",
-    "@testing-library/react": "14.0.0",
-    "@types/node": "^20.4.5",
-    "@types/react": "^18.2.23",
-    "@types/react-dom": "^18.2.23",
-    "@types/react-redux": "^7.1.22",
-    "@vitejs/plugin-react": "^4.2.1",
-    "@vitest/coverage-v8": "1.4.0",
-    "autoprefixer": "^10.4.13",
-    "cypress": "^13.7.1",
-    "dotenv": "^16.4.5",
-    "husky": "^8.0.1",
-    "jsdom": "^22.1.0",
-    "msw": "^2.2.13",
-    "postcss": "8.4.31",
-    "postcss-import": "^15.1.0",
-    "react-test-renderer": "^18.2.0",
-    "rollup-plugin-analyzer": "^4.0.0",
-    "sass": "^1.49.10",
-    "start-server-and-test": "^2.0.0",
-    "stylelint": "^14.16.1",
-    "stylelint-config-prettier": "^9.0.3",
-    "tailwind-merge": "^2.2.1",
-    "tailwindcss": "^3.4.3",
-    "tsconfig": "0.0.0",
-    "typescript": "5.4.3",
-    "vite": "^5.2.7",
-    "vite-tsconfig-paths": "^4.2.3",
-    "vitest": "^1.4.0"
-  },
-  "nyc": {
-    "report-dir": "coverage/cypress",
-    "reporter": [
-      "lcov"
-    ]
-  },
-  "optionalDependencies": {
-    "@rollup/rollup-linux-x64-gnu": "^4.13.0"
-  }
+	"name": "rocco-web",
+	"version": "0.0.0",
+	"private": true,
+	"type": "module",
+	"scripts": {
+		"build": "tsc && vite build",
+		"build:analyze": "tsc && ANALYZE=true vite build",
+		"cy:headless": "cypress run",
+		"cy": "cypress open",
+		"dev": "(npx spotlight-sidecar) & vite",
+		"lint:fix": "biome format --write ./src",
+		"lint:stylelint": "stylelint --config ../../.stylelintrc.json --cache --fix 'src/**/*.{css,scss,less,styl}'",
+		"lint": "biome lint ./src && npm run lint:stylelint",
+		"postinstall": "cypress install",
+		"preview:test": "start-server-and-test preview http://localhost:53422",
+		"preview": "vite preview",
+		"start": "npx http-server build --gzip -a 0.0.0.0 -p $PORT -c 1209600",
+		"test": "vitest --run",
+		"test:coverage": "vitest --run --coverage",
+		"test:coverage:view": "npx vite preview --outDir coverage/lcov-report",
+		"test:e2e": "npm run preview:test 'cypress open'",
+		"test:e2e:ci": "npm run preview:test 'npx cypress run --record'",
+		"test:e2e:headless": "npm run preview:test 'cypress run'",
+		"test:watch": "vitest",
+		"typecheck": "tsc --noEmit --incremental false"
+	},
+	"dependencies": {
+		"@emotion/react": "^11.11.1",
+		"@emotion/styled": "^11.11.0",
+		"@headlessui/react": "^1.7.15",
+		"@hominem/components": "0.0.0",
+		"@reduxjs/toolkit": "^1.7.2",
+		"@spotlightjs/spotlight": "^1.2.5",
+		"@vis.gl/react-google-maps": "^0.4.3",
+		"axios": "^1.6.2",
+		"class-variance-authority": "^0.7.0",
+		"clsx": "^2.1.0",
+		"daisyui": "^3.5.0",
+		"formik": "^2.2.9",
+		"lucide-react": "^0.320.0",
+		"prop-types": "^15.8.1",
+		"react": "18.2.0",
+		"react-dom": "18.2.0",
+		"react-icons": "^4.12.0",
+		"react-query": "^3.34.16",
+		"react-redux": "^8.1.1",
+		"react-router-dom": "^6.2.1",
+		"tailwindcss-animate": "^1.0.7",
+		"yup": "^1.2.0"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.22.9",
+		"@testing-library/cypress": "10.0.1",
+		"@testing-library/jest-dom": "^6.2.0",
+		"@testing-library/react": "14.0.0",
+		"@types/node": "^20.4.5",
+		"@types/react": "^18.2.23",
+		"@types/react-dom": "^18.2.23",
+		"@types/react-redux": "^7.1.22",
+		"@vitejs/plugin-react": "^4.2.1",
+		"@vitest/coverage-v8": "1.4.0",
+		"autoprefixer": "^10.4.13",
+		"cypress": "^13.7.1",
+		"dotenv": "^16.4.5",
+		"husky": "^8.0.1",
+		"jsdom": "^22.1.0",
+		"msw": "^2.2.13",
+		"postcss": "8.4.31",
+		"postcss-import": "^15.1.0",
+		"react-test-renderer": "^18.2.0",
+		"rollup-plugin-analyzer": "^4.0.0",
+		"sass": "^1.49.10",
+		"start-server-and-test": "^2.0.0",
+		"stylelint": "^14.16.1",
+		"stylelint-config-prettier": "^9.0.3",
+		"tailwind-merge": "^2.2.1",
+		"tailwindcss": "^3.4.3",
+		"tsconfig": "0.0.0",
+		"typescript": "5.4.3",
+		"vite": "^5.2.7",
+		"vite-tsconfig-paths": "^4.2.3",
+		"vitest": "^1.4.0"
+	},
+	"nyc": {
+		"report-dir": "coverage/cypress",
+		"reporter": ["lcov"]
+	},
+	"optionalDependencies": {
+		"@rollup/rollup-linux-x64-gnu": "^4.13.0"
+	}
 }
