feat(apps/collab): add gzip compression configuration to nginx.conf

--- a/apps/web/nginx.conf
+++ b/apps/web/nginx.conf
@@ -10,8 +10,15 @@ http {
         root /usr/share/nginx/html;
         index index.html index.htm;
         
+        # Compression
+        gzip on;
+        gzip_types      text/plain application/xml;
+        gzip_proxied    no-cache no-store private expired auth;
+        gzip_min_length 1000;
+
         # Pass requests for / to base url /index.html file:
         location / {
+            gzip_static on;
             try_files $uri $uri/ /index.html;
         }
     }
