--- a/.github/workflows/deploy-api-prod.yaml
+++ b/.github/workflows/deploy-api-prod.yaml
@@ -1,4 +1,4 @@
-name: 🚀 API > Deploy > Prod
+name: deploy-api-prod
 
 on:
   workflow_run:
@@ -6,8 +6,6 @@ on:
     branches: [main]
     types:
       - completed
-  push:
-    branches: [main]
 
 jobs:
   deploy:
