--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -9,6 +9,7 @@
 		"dev": "nodemon --config nodemon.json",
 		"lint": "biome lint ./src",
 		"start": "node build/src/index",
+		"start:ts": "ts-node -r tsconfig-paths/register --project ./tsconfig.json --transpile-only src/index | pino-pretty",
 		"test": "NODE_ENV=test vitest --run --coverage",
 		"test:coverage": "NODE_ENV=test vitest --run --coverage",
 		"test:watch": "NODE_ENV=test vitest",
@@ -28,6 +29,8 @@
 		"@sendgrid/mail": "^7.6.1",
 		"@sentry/node": "^7.60.1",
 		"@sentry/tracing": "^7.60.0",
+		"@swc/core": "^1.4.14",
+		"@swc/helpers": "^0.5.10",
 		"@total-typescript/ts-reset": "^0.4.2",
 		"date-fns": "^2.28.0",
 		"dotenv": "^16.3.1",
