chore(vite): use *.mts extensions

--- a/apps/aidea/package.json
+++ b/apps/aidea/package.json
@@ -2,6 +2,7 @@
 	"name": "aidea",
 	"version": "1.4.0",
 	"private": true,
+	"type": "module",
 	"scripts": {
 		"cy": "cypress open",
 		"cy:headless": "cypress run",
