--- a/apps/aidea/tsconfig.json
+++ b/apps/aidea/tsconfig.json
@@ -32,5 +32,5 @@
     "**/*.json",
     ".next/types/**/*.ts"
   ],
-  "exclude": ["**/node_modules", "**/.*/*", "cypress", "vite.config.ts"]
+  "exclude": ["**/node_modules", "**/.*/*", "cypress", "vite.config.mts"]
 }
