--- a/apps/web/tsconfig.node.json
+++ b/apps/web/tsconfig.node.json
@@ -5,7 +5,7 @@
     "moduleResolution": "node"
   },
   "include": [
-    "vite.config.ts",
-    "vitest.config.ts"
-  ],
+    "vite.config.mts",
+    "vitest.config.mts"
+  ]
 }
