--- a/.github/workflows/deploy-web-prod.yml
+++ b/.github/workflows/deploy-web-prod.yml
@@ -24,11 +24,11 @@ jobs:
       - name: Build
         run: npx turbo run build --filter=rocco-web
 
-      - name: Publish
-        uses: cloudflare/pages-action@1
+      - name: Publish to Cloudflare Pages
+        uses: cloudflare/pages-action@v1
         with:
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
           projectName: rocco
           directory: apps/web/build
-          gitHubToken: ${{ secrets.GITHUB_TOKEN }}
+          wranglerVersion: '3'
