--- a/.github/workflows/deploy-api-prod.yaml
+++ b/.github/workflows/deploy-api-prod.yaml
@@ -4,13 +4,15 @@ on:
   workflow_run:
     workflows: ["code-quality"]
     branches: [main]
+    # Requied to run only on successful completion of the code-quality workflow
     types:
       - completed
+    
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
-
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
