chore(apps/api): update .env.example

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -4,14 +4,15 @@ ENABLE_REQUEST_LOGGING="true"
 # Environment
 NODE_ENV="development"
 
-# API port
+# PORT
 PORT=4444
 
 # UI
-APP_URL="http://localhost:53422"
+APP_URL="http://rocco.hominem.localhost"
+COOKIE_DOMAIN=".hominem.localhost"
 
-# Google Service Account (Base64 encoded)
-GOOGLE_SERVICE_ACCOUNT="...."
+# Google
+GOOGLE_SERVICE_ACCOUNT=
 
 # Sendgrid
 SENDGRID_API_KEY="SG.llkajsdlfkjalsdkjflkasdf"
