feat(apps/api): switch env.example secret gen to openssl

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -21,9 +21,9 @@ SENDGRID_SENDER_NAME=""
 
 # Cookie
 COOKIE_NAME="rocco" 
-# Generate salt: node -e "console.log(require('crypto').randomBytes(10).toString('base64'));"
+# Generate salt: openssl rand -base64 16
 COOKIE_SALT=""
-# Generate secret: node -e "console.log(require('crypto').randomBytes(26).toString('base64'));"
+# Generate secret: openssl rand -base64 32
 COOKIE_SECRET=""
 
 # Database
