--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -54,6 +54,7 @@
 		"@testing-library/cypress": "10.0.1",
 		"@testing-library/jest-dom": "^6.2.0",
 		"@testing-library/react": "14.0.0",
+		"@testing-library/user-event": "^14.5.2",
 		"@types/node": "^20.4.5",
 		"@types/react": "^18.2.23",
 		"@types/react-dom": "^18.2.23",
