--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -31,6 +31,7 @@
 		"@headlessui/react": "^1.7.15",
 		"@hominem/components": "0.0.0",
 		"@reduxjs/toolkit": "^1.7.2",
+		"@tanstack/react-router": "^1.31.6",
 		"@vis.gl/react-google-maps": "^0.4.3",
 		"axios": "^1.6.2",
 		"class-variance-authority": "^0.7.0",
@@ -39,18 +40,19 @@
 		"formik": "^2.2.9",
 		"lucide-react": "^0.320.0",
 		"prop-types": "^15.8.1",
-		"react": "18.2.0",
-		"react-dom": "18.2.0",
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1",
 		"react-icons": "^4.12.0",
 		"react-query": "^3.34.16",
 		"react-redux": "^8.1.1",
-		"react-router-dom": "^6.2.1",
 		"tailwindcss-animate": "^1.0.7",
 		"yup": "^1.2.0"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.22.9",
 		"@spotlightjs/spotlight": "^1.2.5",
+		"@tanstack/router-devtools": "^1.31.6",
+		"@tanstack/router-vite-plugin": "^1.30.0",
 		"@testing-library/cypress": "10.0.1",
 		"@testing-library/jest-dom": "^6.2.0",
 		"@testing-library/react": "14.0.0",
