feat(app/web): use authprovider

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -31,7 +31,8 @@
 		"@headlessui/react": "^1.7.15",
 		"@hominem/components": "0.0.0",
 		"@reduxjs/toolkit": "^1.7.2",
-		"@tanstack/react-router": "^1.31.6",
+		"@tanstack/react-query": "^4.29.19",
+		"@tanstack/react-router": "^1.31.20",
 		"@vis.gl/react-google-maps": "^0.4.3",
 		"axios": "^1.6.2",
 		"class-variance-authority": "^0.7.0",
