--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -13,10 +13,10 @@
     "prisma:reset": "npx prisma migrate reset"
   },
   "dependencies": {
-    "@prisma/client": "^5.11.0",
-    "prisma": "^5.11.0"
+    "@prisma/client": "^5.13.0"
   },
   "devDependencies": {
+    "prisma": "^5.13.0",
     "ts-node-dev": "^2.0.0"
   }
 }
