feat(apps/web): add list menu

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,5 +16,11 @@
     },
     "[javascript]": {
         "editor.defaultFormatter": "biomejs.biome"
+    },
+    "[css]": {
+        "editor.defaultFormatter": "biomejs.biome"
+    },
+    "[tailwindcss]": {
+        "editor.defaultFormatter": "biomejs.biome"
     }
 }
