--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -30,12 +30,16 @@
 		"@emotion/styled": "^11.11.0",
 		"@headlessui/react": "^1.7.15",
 		"@hominem/components": "0.0.0",
+		"@radix-ui/react-dialog": "^1.0.5",
+		"@radix-ui/react-dropdown-menu": "^2.0.6",
+		"@radix-ui/react-icons": "^1.3.0",
+		"@radix-ui/react-slot": "^1.0.2",
 		"@reduxjs/toolkit": "^1.7.2",
 		"@tanstack/react-query": "^5.35.1",
 		"@vis.gl/react-google-maps": "^0.4.3",
 		"axios": "^1.6.2",
 		"class-variance-authority": "^0.7.0",
-		"clsx": "^2.1.0",
+		"clsx": "^2.1.1",
 		"daisyui": "^4.10.5",
 		"formik": "^2.2.9",
 		"lucide-react": "^0.320.0",
@@ -75,7 +79,7 @@
 		"start-server-and-test": "^2.0.0",
 		"stylelint": "^14.16.1",
 		"stylelint-config-prettier": "^9.0.3",
-		"tailwind-merge": "^2.2.1",
+		"tailwind-merge": "^2.3.0",
 		"tailwindcss": "^3.4.3",
 		"tsconfig": "0.0.0",
 		"typescript": "5.4.3",
