--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -53,6 +53,7 @@
 	},
 	"devDependencies": {
 		"@babel/core": "^7.22.9",
+		"@playwright/test": "^1.44.0",
 		"@spotlightjs/spotlight": "^1.2.5",
 		"@tanstack/react-query-devtools": "^5.35.1",
 		"@testing-library/cypress": "10.0.1",
