--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -9,8 +9,9 @@
     "forceConsistentCasingInFileNames": true,
     "inlineSources": false,
     "isolatedModules": true,
-    "module": "ES2022",
-    "moduleResolution": "Bundler",
+    "module": "CommonJS",
+    "target": "ESNext",
+    "moduleResolution": "Node",
     "noUnusedLocals": false,
     "noUnusedParameters": false,
     "outDir": "build",
