--- a/apps/web/tsconfig.node.json
+++ b/apps/web/tsconfig.node.json
@@ -1,8 +1,7 @@
 {
   "compilerOptions": {
     "composite": true,
-    "module": "esnext",
-    "moduleResolution": "Bundler"
+    "module": "ESNext"
   },
   "include": [
     "vite.config.mts",
