fix: use CommonJS module for hominem/db

--- a/packages/db/tsconfig.json
+++ b/packages/db/tsconfig.json
@@ -9,7 +9,8 @@
     "forceConsistentCasingInFileNames": true,
     "inlineSources": false,
     "isolatedModules": true,
-    "module": "ESNext",
+    "module": "CommonJS",
+    "target": "ESNext",
     "moduleResolution": "Node",
     "noUnusedLocals": false,
     "noUnusedParameters": false,
