--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -6,8 +6,6 @@
 	"scripts": {
 		"build": "tsc && vite build",
 		"build:analyze": "tsc && ANALYZE=true vite build",
-		"cy:headless": "cypress run",
-		"cy": "cypress open",
 		"dev": "(npx spotlight-sidecar) & vite",
 		"lint:fix": "biome format --write ./src",
 		"lint:stylelint": "stylelint --config .stylelintrc.json --cache --fix 'src/**/*.{css,scss}'",
@@ -19,9 +17,9 @@
 		"test": "NODE_ENV=test vitest --run",
 		"test:coverage": "vitest --run --coverage",
 		"test:coverage:view": "npx vite preview --outDir coverage/lcov-report",
-		"test:e2e": "npm run preview:test 'cypress open'",
+		"test:e2e": "npm run preview:test 'npx cypress open'",
 		"test:e2e:ci": "npm run preview:test 'npx cypress run --record'",
-		"test:e2e:headless": "npm run preview:test 'cypress run'",
+		"test:e2e:headless": "npm run preview:test 'npx cypress run'",
 		"test:watch": "vitest",
 		"typecheck": "tsc --noEmit --incremental false"
 	},
