--- a/apps/web/tsconfig.node.json
+++ b/apps/web/tsconfig.node.json
@@ -4,7 +4,7 @@
     "module": "ESNext"
   },
   "include": [
-    "vite.config.mts",
-    "vitest.config.mts"
+    "vite.config.ts",
+    "vitest.config.ts"
   ]
 }
