refactor: typescript configs (#76)
* refactor: move stylelintrc to apps/web

* refactor: use npx cypress in npm scripts

* refactor: use .ts for vite files

* refactor: use .ts for vite in tsconfig.node.json

* refactor: set module and moduleResolution in tsconfig/react

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -6,11 +6,9 @@
 	"scripts": {
 		"build": "tsc && vite build",
 		"build:analyze": "tsc && ANALYZE=true vite build",
-		"cy:headless": "cypress run",
-		"cy": "cypress open",
 		"dev": "(npx spotlight-sidecar) & vite",
 		"lint:fix": "biome format --write ./src",
-		"lint:stylelint": "stylelint --config ../../.stylelintrc.json --cache --fix 'src/**/*.{css,scss,less,styl}'",
+		"lint:stylelint": "stylelint --config .stylelintrc.json --cache --fix 'src/**/*.{css,scss}'",
 		"lint": "biome lint ./src && npm run lint:stylelint",
 		"postinstall": "cypress install",
 		"preview:test": "start-server-and-test preview http://localhost:53422",
@@ -19,9 +17,9 @@
 		"test": "NODE_ENV=test vitest --run",
 		"test:coverage": "vitest --run --coverage",
 		"test:coverage:view": "npx vite preview --outDir coverage/lcov-report",
-		"test:e2e": "npm run preview:test 'cypress open'",
+		"test:e2e": "npm run preview:test 'npx cypress open'",
 		"test:e2e:ci": "npm run preview:test 'npx cypress run --record'",
-		"test:e2e:headless": "npm run preview:test 'cypress run'",
+		"test:e2e:headless": "npm run preview:test 'npx cypress run'",
 		"test:watch": "vitest",
 		"typecheck": "tsc --noEmit --incremental false"
 	},
