--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
         "quickfix.biome": "explicit",
         "source.organizeImports.biome": "explicit"
     },
+    "editor.defaultFormatter": "biomejs.biome",
     "[typescript]": {
         "editor.defaultFormatter": "biomejs.biome"
     },
@@ -20,7 +21,4 @@
     "[css]": {
         "editor.defaultFormatter": "biomejs.biome"
     },
-    "[tailwindcss]": {
-        "editor.defaultFormatter": "biomejs.biome"
-    }
 }
