--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -38,6 +38,7 @@
 		"axios": "^1.6.2",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
+		"cmdk": "^1.0.0",
 		"daisyui": "^4.10.5",
 		"formik": "^2.2.9",
 		"lucide-react": "^0.320.0",
