ci: update github workflows

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,6 +18,9 @@
     "[javascript]": {
         "editor.defaultFormatter": "biomejs.biome"
     },
+    "[json]": {
+        "editor.defaultFormatter": "denoland.vscode-deno"
+    },
     "[css]": {
         "editor.defaultFormatter": "biomejs.biome"
     },
