fix: add COOKIE_DOMAIN to turbo globalEnv

--- a/turbo.json
+++ b/turbo.json
@@ -8,6 +8,7 @@
     "COOKIE_NAME",
     "COOKIE_SALT",
     "COOKIE_SECRET",
+    "COOKIE_DOMAIN",
     "CYPRESS_PROJECT_ID",
     "ENABLE_REQUEST_LOGGING",
     "GOOGLE_SERVICE_ACCOUNT",
