fix: switch turbo scope to filter

--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "prepush": "npm run test",
     "prerelease": "npm run test",
     "test": "turbo run test",
-    "test:e2e:ci": "turbo run test:e2e:ci --scope rocco-web",
-    "test:update": "turbo run test:update --scope rocco-web",
+    "test:e2e:ci": "turbo run test:e2e:ci --filter=rocco-web",
+    "test:update": "turbo run test:update --filter=rocco-web",
     "prisma:dev": "npm run prisma:dev -w @hominem/db",
     "prisma:generate": "npm run prisma:generate -w @hominem/db",
     "prisma:migrate": "npm run prisma:migrate -w @hominem/db",
